	  board is based on the Allwinner A10 (2013-12-7).
	* arch/arm/src/a1x/a1x_boot.c and chip/a1x_intc.h:  More A10 logic
	  (2013-12-8).
	* arch/arm/src/a1x/a1x_irq.c:  A10 interrupt handling logic (partial)
	  (2013-12-8).
	* drivers/video/ov2640.c: An OV2640 camera driver that will be used to
	  verify the SAMA5D3x-EK ISI peripheral (2013-1209).
	* sama5d3x-ek/ov2640 and src/sam_ov2640.c.  Board logic to test the SAMA5D3
	  ISI peripheral usign the OV2640 camera (2013-12-9).
	* arch/arm/src/a1x/chip/a1x_uart.h:  A10 UART register definition
	  header file (2013-12-9).
	* include/nuttx/video/fb.h:  Move fb.h to include/nuttx/video/
	  (2013-12-10).
	* include/nuttx/video/rgbcolors.h:  Move rgbcolors.h to include/nuttx/video.
	  (2013-12-10).
	* include/nuttx/fs/smart.h:  Move smart.h to include/fs/smart.h
	  (2013-12-10).
	* include/nuttx/fs/ramdisk.h:  Move ramdisk.h to include/fs/ramdisk.h
	  (2013-12-10).
	* arch/arm/src/a1x/chip/a1x_pio.h and a10_piocfg.h:  PIO register
	  defintion header files (2013-12-10).
	* arch/arm/src/a1x/a1x_pio.c and .h:  Support for PIO configuration
	  (2013-12-11).
	* libc/misc/lib_match.c:  Pattern matching logic extended to handle
	  matches to sets of characters and ranges of character values.  From
	  Ken Pettit (2013-12-12).
	* fs/procfs, drivers/mtd, fs/smartfs, includes/nuttx/fs, .. to many
	  files to list:  Extensive changes by Ken Pettit to extend procfs/
	  functionality.  Includes some incomplete changes related to
	  SmartFS (2013-12-12).
	* configs/stm32f429i-disco: Add support for procfs/ MTD part names.
	  From Ken Pettit (2013-12-12)
	* arch/arm/src/a1x/chip/a1x_timer.h:  Timer register bit definitions
	  (incomplete on initial check-in) (2013-12-12).
	* lbc/time/lib_strftime.c: Need null-termination on the the string
	  generated by strftime().  From Max Holtzberg (2013-12-12).
	* sched/nanosleep.c and include/time.h:  Add nanosleep() (2013-12-12).