@@ -162,9 +162,8 @@
 #  define SYS_sigsuspend               (__SYS_signals+5)
 #  define SYS_sigtimedwait             (__SYS_signals+6)
 #  define SYS_sigwaitinfo              (__SYS_signals+7)
-#  define SYS_sleep                    (__SYS_signals+8)
-#  define SYS_usleep                   (__SYS_signals+9)
-#  define __SYS_clock                  (__SYS_signals+10)
+#  define SYS_nanosleep                (__SYS_signals+8)
+#  define __SYS_clock                  (__SYS_signals+9)
 #else
 #  define __SYS_clock                  __SYS_signals
 #endif
@@ -206,7 +205,7 @@
 #  define CONFIG_NSOCKET_DESCRIPTORS 0
 #endif
 
-#if CONFIG_NFILE_DESCRIPTORS > 0 || CONFIG_NSOCKET_DESCRIPTORS > 0 
+#if CONFIG_NFILE_DESCRIPTORS > 0 || CONFIG_NSOCKET_DESCRIPTORS > 0
 #  define SYS_close                    (__SYS_descriptors+0)
 #  define SYS_ioctl                    (__SYS_descriptors+1)
 #  define SYS_read                     (__SYS_descriptors+2)
