@@ -35,7 +35,7 @@
 
 -include $(TOPDIR)/Make.defs
 
-ASRCS = 
+ASRCS =
 AOBJS = $(ASRCS:.S=$(OBJEXT))
 
 MISC_SRCS  = os_start.c os_bringup.c errno_getptr.c errno_get.c errno_set.c
@@ -71,15 +71,15 @@ SCHED_SRCS += sched_yield.c sched_rrgetinterval.c sched_foreach.c
 SCHED_SRCS += sched_lock.c sched_unlock.c sched_lockcount.c sched_self.c
 
 ifeq ($(CONFIG_SCHED_ATEXIT),y)
-SCHED_SRCS += atexit.c 
+SCHED_SRCS += atexit.c
 endif
 
 ifeq ($(CONFIG_SCHED_ONEXIT),y)
-SCHED_SRCS += on_exit.c 
+SCHED_SRCS += on_exit.c
 endif
 
 ifeq ($(CONFIG_PRIORITY_INHERITANCE),y)
-SCHED_SRCS += sched_reprioritize.c 
+SCHED_SRCS += sched_reprioritize.c
 endif
 
 ifeq ($(CONFIG_SCHED_WAITPID),y)
@@ -96,7 +96,7 @@ GRP_SRCS += task_getgroup.c group_foreachchild.c group_killchildren.c
 ifeq ($(CONFIG_SCHED_HAVE_PARENT),y)
 GRP_SRCS += task_reparent.c
 ifeq ($(CONFIG_SCHED_CHILD_STATUS),y)
-GRP_SRCS += group_childstatus.c 
+GRP_SRCS += group_childstatus.c
 endif
 endif
 
@@ -114,7 +114,7 @@ WDOG_SRCS += wd_gettime.c
 TIME_SRCS = sched_processtimer.c
 
 ifneq ($(CONFIG_DISABLE_SIGNALS),y)
-TIME_SRCS += sleep.c usleep.c nanosleep.c
+TIME_SRCS += nanosleep.c
 endif
 
 CLOCK_SRCS  = clock_initialize.c clock_settime.c clock_gettime.c clock_getres.c
