@@ -132,8 +132,7 @@ uintptr_t STUB_sigsuspend(int nbr, uintptr_t parm1);
 uintptr_t STUB_sigtimedwait(int nbr, uintptr_t parm1, uintptr_t parm2,
             uintptr_t parm3);
 uintptr_t STUB_sigwaitinfo(int nbr, uintptr_t parm1, uintptr_t parm2);
-uintptr_t STUB_sleep(int nbr, uintptr_t parm1);
-uintptr_t STUB_usleep(int nbr, uintptr_t parm1);
+uintptr_t STUB_nanosleep(int nbr, uintptr_t parm1, uintptr_t parm2);
 
 /* The following are only defined if the system clock is enabled in the
  * NuttX configuration.
