@@ -6211,3 +6211,9 @@
 	* lbc/time/lib_strftime.c: Need null-termination on the the string
 	  generated by strftime().  From Max Holtzberg (2013-12-12).
 	* sched/nanosleep.c and include/time.h:  Add nanosleep() (2013-12-12).
+	* libc/unistd/lib_sleep.c and lib_usleep.c.  Move sleep() and
+	  usleep() from sched/sleep.c and usleep.c to libc/unistd.  These
+	  functions now just call nanosleep(). (2013-12-13).
+	* syscall/ and include/sys/syscall.h:  Remove sleep and usleep
+	  system calls.  Add nanosleep system call (2013-12-13).
+
